--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Nick Shen built the Simple Ear Training app as
+                  Nick Shen built the DoReMi? Simple Ear Training app as
                   an Ad Supported app. This SERVICE is provided by
                   Nick Shen at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which are accessible at
-                  Simple Ear Training unless otherwise defined in this Privacy Policy.
+                  DoReMi? Simple Ear Training unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
